--- a/css/index.css
+++ b/css/index.css
@@ -5,6 +5,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
+  color: #9bd1ec;
 }
 
 canvas {
@@ -17,6 +18,30 @@ canvas {
 svg {
   position: fixed;
   top: 100vh;
+}
+
+aside {
+  position: fixed;
+  max-width: 220px;
+  font-size: inherit;
+  top: 30px;
+  left: 60px;
+}
+aside ul {
+  margin-left: -50px;
+}
+
+a {
+  color: green;
+  padding: 5px 10px;
+  display: inline-block;
+}
+a:hover {
+  color: lime;
+}
+
+li::marker {
+  color: #004200;
 }
 
 /*# sourceMappingURL=index.css.map */
