--- a/css/index.css
+++ b/css/index.css
@@ -44,4 +44,11 @@ li::marker {
   color: #004200;
 }
 
+#music {
+  text-decoration: none;
+  position: fixed;
+  bottom: 30px;
+  left: 30px;
+}
+
 /*# sourceMappingURL=index.css.map */
